sec_https/ing-tls/app-deploy.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: tlsapp-php 
  labels:
    app: php 
spec:
  replicas: 3 
  selector:
    matchLabels: 
      app: php
  template: 
    metadata:
      labels: 
        app: php
    spec: 
      containers:
      - name: phpserver-container 
        image: dbgurum/phpserver:2.0
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tlsapp-go
  labels:
    app: go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go-container 
        image: dbgurum/goapp:1.0
        ports:
        - containerPort: 9090
