sec_https/ing-tls/app-tls-ing.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: app-tls-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - php.k8s.io
    - goapp.k8s.io
    secretName: k8s-tls-secret
  rules:
  - host: php.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tlsapp-php-svc
            port:
              number: 80
  - host: goapp.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tlsapp-go-svc
            port:
              number: 80
